--- a/myPage.css
+++ b/myPage.css
@@ -33,7 +33,7 @@
     justify-content: center;
     align-items: center;
     width: 80%;
-    margin-top: 2rem;
+    margin: 2rem 0;
     height: 100%;
 }
 
