--- a/common.css
+++ b/common.css
@@ -135,6 +135,7 @@ input[type="checkbox"]{
 
 }
 
+
 #productWrapper{
     display: flex;
     flex-direction: column;
@@ -207,33 +208,49 @@ input[type="checkbox"]{
 
 
 .discountContainer{
-    display: flex;
-    flex-direction: row;
+/*     display: flex;
+ */    flex-direction: row;
     margin-top: 15vh;
 /*     z-index: 2;
  */
-
+    width: 100%;
 }
 
 .discountBox{
+    width: 100%;
     display: flex;
     flex-direction: column;
     align-content: center;
     flex: 1;
     background-color:#e9d9e0 ;
-    height: 35vh;
     padding-left: 10px;
+    overflow-x: auto;
+    /* Hide scrollbar for IE and Edge */ 
+       -ms-overflow-style: none;  
+      scrollbar-width: none; 
+
 }
+
+/* .discountBox::-webkit-scrollbar {
+    display: none;
+}  */
 
 .discountBox:nth-child(2) {
     background-color:#E2DDDC;
   }
 
 .discountItems{
-      display: flex;
-      justify-content: space-around;
-      align-items: center;
+    display: flex;
+    height: 100%;
+/*     justify-content: space-around;
+ */    align-items: center;
 }
+ 
+.discountItems > .productBoxWrapper {
+    margin: 25px;
+    width: 100%;
+}
+
 
 .bottomSection{
     display: flex;
@@ -413,7 +430,9 @@ footer {
         #currentUser{
             display: none;
         }
-  
+        .discountItems > .productBoxWrapper > button {
+            height: 5vh;
+        }
 
       }
 
